<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/the_cat_in_the_hat"
        android:background="@color/orange"
        android:layout_marginTop="10dp"
        android:padding="13dp"
        android:textSize="17sp"
        android:textStyle="bold"
        android:textColor="@color/white"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_the_cat"
        android:background="@color/light_blue"
        android:id="@+id/button_the_cat"
        android:layout_marginTop="10dp"
        android:textColor="@color/white" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_the_thing1"
        android:background="@color/blue"
        android:id="@+id/button_the_thing1"
        android:layout_marginTop="10dp"
        android:textColor="@color/white"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_the_thing2"
        android:background="@color/green"
        android:id="@+id/button_the_thing2"
        android:layout_marginTop="10dp"
        android:textColor="@color/white" />


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_thingamajigger"
        android:background="@color/yellow"
        android:id="@+id/button_thingamajigger"
        android:layout_marginTop="10dp"
        android:textColor="@color/white"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_sally"
        android:background="@color/orange"
        android:id="@+id/button_sally"
        android:layout_marginTop="10dp"
        android:textColor="@color/white" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_nick"
        android:background="@color/pink"
        android:id="@+id/button_nick"
        android:layout_marginTop="10dp"
        android:textColor="@color/white" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_dr_seuss"
        android:background="@color/purple"
        android:id="@+id/button_dr_seuss"
        android:layout_marginTop="10dp"
        android:textColor="@color/white" />

</LinearLayout>
